feat: Implement AI chatbot and enhance UI
Introduces the AI chatbot functionality, enabling users to query and analyze dashboard data through natural language. This commit also includes UI improvements such as:

- Added Tailwind CSS dark mode configuration for better theming.
- Implemented CSS animations for smoother UI transitions and visual flair.
- Refactored `index.tsx` to use `* as` for React imports, aligning with common practices.
- Updated `types.ts` to include new fields for contact details and notification settings, along with new type aliases for theme and admin tabs.
- Modified `mockData.ts` to reflect the updated contact structure.
- Adjusted `geminiService.ts` to use environment variables for API keys and refine data context for the AI.
- Enhanced `App.tsx` to manage new modal states for editing and password changes, and to integrate the new settings and password modals.

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -1,187 +1,290 @@
+
 {
-  "login.subtitle": "Management Information System",
-  "login.emailPlaceholder": "Email address",
-  "login.passwordPlaceholder": "Password",
-  "login.signInButton": "Sign in",
-  "login.welcome": "Welcome",
-  "signup.prompt": "Don't have an account? Sign up",
-  "signup.loginPrompt": "Already have an account? Sign in",
-  "signup.namePlaceholder": "Full Name",
-  "signup.emailPlaceholder": "Email address",
-  "signup.phonePlaceholder": "Phone Number",
-  "signup.passwordPlaceholder": "Create a password",
-  "signup.signUpButton": "Request Access",
-  "tabs.calendar": "Calendar",
-  "tabs.financials": "Financials",
-  "tabs.challenges": "Challenges & Advantages",
-  "tabs.contacts": "Contacts",
-  "tabs.tasks": "Tasks",
-  "tabs.adminPanel": "Admin Panel",
-  "statCards.totalMeetings": "Total Meetings",
-  "statCards.meetingsThisWeek": "Meetings This Week",
-  "statCards.pendingPayments": "Pending Payments",
-  "statCards.startThisWeek": "Starting This Week",
-  "statCards.activeEscrows": "Active Contacts",
-  "statCards.inCompensation": "Recently Added",
-  "statCards.testCondition": "Task Completion",
-  "chatbot.initialMessage": "Hello! How can I help you with the dashboard data today?",
-  "chatbot.prompt1": "Summarize my tasks for today.",
-  "chatbot.prompt2": "Which payments are pending?",
-  "chatbot.prompt3": "Show me high-priority tasks.",
-  "chatbot.prompt4": "Who is on the medical board?",
-  "chatbot.toggle": "Toggle Chatbot",
-  "chatbot.header": "Dripfy AI Assistant",
-  "chatbot.subtitle": "Online",
-  "chatbot.clear": "Clear Chat",
-  "chatbot.error": "Sorry, an error occurred.",
-  "chatbot.examplePrompts": "Example Prompts",
-  "chatbot.placeholder": "Ask about dashboard data...",
-  "chatbot.send": "Send",
-  "profile.menu.profile": "Profile",
-  "profile.menu.settings": "Settings",
-  "profile.menu.privacy": "Privacy",
-  "profile.menu.logout": "Logout",
-  "settings.title": "Settings",
-  "settings.closeButton": "Close",
-  "settings.saveButton": "Save Changes",
-  "settings.tabs.profile": "Profile",
-  "settings.tabs.settings": "Settings",
-  "settings.tabs.privacy": "Privacy",
-  "settings.profile.title": "Personal Information",
-  "settings.profile.subtitle": "Update your photo and personal details.",
-  "settings.profile.name": "Full Name",
-  "settings.profile.email": "Email Address",
-  "settings.profile.password": "Password",
-  "settings.profile.newPassword": "New Password",
-  "settings.profile.confirmPassword": "Confirm New Password",
-  "settings.profile.changePassword": "Change Password",
-  "settings.profile.role": "Role",
-  "settings.settings.title": "Application Settings",
-  "settings.settings.subtitle": "Customize your experience.",
-  "settings.settings.language": "Language",
-  "settings.settings.darkMode": "Dark Mode",
-  "settings.settings.emailNotifications": "Email Notifications",
-  "settings.settings.pushNotifications": "Push Notifications",
-  "settings.privacy.title": "Privacy Settings",
-  "settings.privacy.subtitle": "Manage your data and privacy.",
-  "settings.privacy.auditLog": "Activity Log",
-  "settings.privacy.exportData": "Export My Data",
-  "settings.privacy.deleteAccount": "Delete Account",
-  "settings.privacy.exporting": "Exporting...",
-  "settings.privacy.deleting": "Deleting...",
-  "days.monday": "Monday",
-  "days.tuesday": "Tuesday",
-  "days.wednesday": "Wednesday",
-  "days.thursday": "Thursday",
-  "days.friday": "Friday",
-  "days.saturday": "Saturday",
-  "days.sunday": "Sunday",
-  "daysShort.mon": "Mon",
-  "daysShort.tue": "Tue",
-  "daysShort.wed": "Wed",
-  "daysShort.thu": "Thu",
-  "daysShort.fri": "Fri",
-  "daysShort.sat": "Sat",
-  "daysShort.sun": "Sun",
-  "calendar.today": "Today",
-  "calendar.month": "Month",
-  "calendar.week": "Week",
-  "calendar.newEvent": "New Event",
-  "calendar.addEventTo": "Add event to",
-  "calendar.openPicker": "Open date picker",
-  "financials.newRecord": "New Record",
-  "financials.description": "Description",
-  "financials.amount": "Amount",
-  "financials.status": "Status",
-  "financials.dueDate": "Due Date",
-  "status.paid": "Paid",
-  "status.pending": "Pending",
-  "status.overdue": "Overdue",
-  "challenges.title": "Challenges",
-  "challenges.add": "Add Challenge",
-  "advantages.title": "Advantages",
-  "advantages.add": "Add Advantage",
-  "contacts.newContact": "New Contact",
-  "tasks.task": "Task",
-  "tasks.assignee": "Assignee",
-  "tasks.priority": "Priority",
-  "tasks.status": "Status",
-  "tasks.dueDate": "Due Date",
-  "tasks.newTask": "New Task",
-  "priority.high": "High",
-  "priority.medium": "Medium",
-  "priority.low": "Low",
-  "taskStatus.ToDo": "To Do",
-  "taskStatus.InProgress": "In Progress",
-  "taskStatus.Done": "Done",
-  "admin.userPermissions": "User Permissions",
-  "admin.auditLog": "Audit Log",
-  "admin.signupRequests": "Signup Requests",
-  "admin.by": "by",
-  "admin.approve": "Approve",
-  "admin.deny": "Deny",
-  "admin.noRequests": "No pending signup requests.",
-  "userRoles.admin": "Admin",
-  "userRoles.user": "User",
-  "auditLogActions.Created": "Created",
-  "auditLogActions.Updated": "Updated",
-  "auditLogActions.Deleted": "Deleted",
-  "auditLogActions.Approved": "Approved",
-  "auditLogActions.Denied": "Denied",
-  "dataTypes.schedule": "Event",
-  "dataTypes.financial": "Financial Record",
-  "dataTypes.challenge": "Challenge",
-  "dataTypes.advantage": "Advantage",
-  "dataTypes.contact": "Contact",
-  "dataTypes.task": "Task",
-  "dataTypes.user": "User",
-  "dataTypes.SignupRequest": "Signup Request",
-  "modal.createNew": "Create New",
-  "modal.edit": "Edit",
-  "modal.delete": "Delete",
-  "modal.create": "Create",
-  "modal.save": "Save Changes",
-  "modal.noFields": "No editable fields for this item type.",
-  "modal.type": "Type",
-  "modal.status": "Status",
-  "modal.dueDate": "Due Date",
-  "modal.schedule.title": "Title",
-  "modal.schedule.day": "Day",
-  "modal.schedule.time": "Time",
-  "modal.schedule.participants": "Participants (comma-separated)",
-  "modal.financials.description": "Description",
-  "modal.financials.amount": "Amount (€)",
-  "modal.challenges.title": "Title",
-  "modal.challenges.description": "Description",
-  "modal.challenges.severity": "Severity",
-  "modal.advantages.title": "Title",
-  "modal.advantages.description": "Description",
-  "modal.contacts.name": "Name",
-  "modal.contacts.role": "Role",
-  "modal.contacts.email": "Email",
-  "modal.contacts.phone": "Phone",
-  "modal.tasks.title": "Title",
-  "modal.tasks.assignee": "Assignee",
-  "modal.tasks.priority": "Priority",
-  "modal.users.name": "Name",
-  "modal.users.email": "Email",
-  "modal.users.role": "Role",
-  "footer.links": "Links",
-  "footer.imprint": "Imprint",
-  "footer.privacy": "Privacy Policy",
-  "footer.terms": "Terms & Conditions",
-  "footer.followUs": "Follow Us",
-  "footer.copyright": "© 2024 Dripfy GmbH. All rights reserved.",
-  "positions": {
-    "CEO": "CEO",
-    "CTO": "CTO",
-    "CFO": "CFO",
-    "COO": "COO",
-    "HeadofDepartment": "Head of Department",
-    "TeamLead": "Team Lead",
-    "ProjectManager": "Project Manager",
-    "SeniorSpecialist": "Senior Specialist",
-    "JuniorSpecialist": "Junior Specialist",
-    "Intern": "Intern"
-  }
+    "login": {
+        "welcome": "Welcome to",
+        "subtitle": "longevity by infusions",
+        "emailPlaceholder": "Email address",
+        "passwordPlaceholder": "Password",
+        "signInButton": "Sign In",
+        "forgotPassword": "Forgot password?"
+    },
+    "signup": {
+        "prompt": "Don't have an account? Sign up",
+        "loginPrompt": "Already have an account? Log in",
+        "namePlaceholder": "Full Name",
+        "emailPlaceholder": "Email address",
+        "phonePlaceholder": "Phone Number",
+        "passwordPlaceholder": "Create Password",
+        "signUpButton": "Sign Up",
+        "requestReceived": "Signup request received! An admin will review it shortly."
+    },
+    "verify": {
+        "title": "Verify your email",
+        "subtitle": "We sent a verification code to {email}. Please enter it below.",
+        "codePlaceholder": "Verification Code",
+        "button": "Verify & Sign Up",
+        "backButton": "Back to sign up",
+        "invalidCode": "Invalid verification code. Please try again."
+    },
+    "positions": {
+        "CEO": "CEO",
+        "CTO": "CTO",
+        "CFO": "CFO",
+        "COO": "COO",
+        "HeadofDepartment": "Head of Department",
+        "TeamLead": "Team Lead",
+        "ProjectManager": "Project Manager",
+        "SeniorSpecialist": "Senior Specialist",
+        "JuniorSpecialist": "Junior Specialist",
+        "Intern": "Intern"
+    },
+    "dashboard": {
+        "title": "Dashboard"
+    },
+    "statCards": {
+        "totalMeetings": "Total Meetings",
+        "meetingsThisWeek": "Meetings starting this week",
+        "pendingPayments": "Pending Payments",
+        "startThisWeek": "Start this week",
+        "activeEscrows": "Active Escrows",
+        "inCompensation": "In compensation",
+        "testCondition": "Test Condition",
+        "progress": "Progress"
+    },
+    "tabs": {
+        "calendar": "Calendar",
+        "financials": "Financials",
+        "challenges": "Challenges & Advantages",
+        "contacts": "Contacts",
+        "tasks": "Tasks",
+        "adminPanel": "Admin Panel"
+    },
+    "calendar": {
+        "today": "Today",
+        "month": "Month",
+        "week": "Week",
+        "newEvent": "New Event",
+        "openPicker": "Open date picker",
+        "addEventTo": "Add event to"
+    },
+    "days": {
+        "monday": "Monday",
+        "tuesday": "Tuesday",
+        "wednesday": "Wednesday",
+        "thursday": "Thursday",
+        "friday": "Friday",
+        "saturday": "Saturday",
+        "sunday": "Sunday"
+    },
+    "daysShort": {
+        "mon": "Mon",
+        "tue": "Tue",
+        "wed": "Wed",
+        "thu": "Thu",
+        "fri": "Fri",
+        "sat": "Sat",
+        "sun": "Sun"
+    },
+    "financials": {
+        "description": "Description",
+        "amount": "Amount",
+        "status": "Status",
+        "dueDate": "Due Date",
+        "type": "Type",
+        "newRecord": "New Record",
+        "incoming": "Incoming",
+        "outgoing": "Outgoing"
+    },
+    "challenges": {
+        "title": "Challenges",
+        "add": "Add Challenge",
+        "description": "Description",
+        "severity": "Severity",
+        "severities": {
+            "high": "High",
+            "medium": "Medium",
+            "low": "Low"
+        }
+    },
+    "advantages": {
+        "title": "Advantages",
+        "add": "Add Advantage",
+        "description": "Description"
+    },
+    "contacts": {
+        "searchPlaceholder": "Search by name, role, city...",
+        "newContact": "New Contact",
+        "sort": {
+            "firstNameAsc": "First Name (A-Z)",
+            "firstNameDesc": "First Name (Z-A)",
+            "lastNameAsc": "Last Name (A-Z)",
+            "lastNameDesc": "Last Name (Z-A)",
+            "countryAsc": "Country (A-Z)",
+            "cityAsc": "City (A-Z)",
+            "roleAsc": "Role (A-Z)"
+        },
+        "firstName": "First Name",
+        "lastName": "Last Name",
+        "email": "Email",
+        "role": "Role",
+        "type": "Type",
+        "country": "Country",
+        "city": "City",
+        "phone": "Phone",
+        "address": "Address"
+    },
+    "tasks": {
+        "newTask": "New Task",
+        "title": "Title",
+        "priority": "Priority",
+        "status": "Status",
+        "dueDate": "Due Date",
+        "assignee": "Assignee"
+    },
+    "status": {
+        "paid": "Paid",
+        "pending": "Pending",
+        "overdue": "Overdue",
+        "todo": "To Do",
+        "inprogress": "In Progress",
+        "done": "Done"
+    },
+    "admin": {
+        "userPermissions": "User Permissions",
+        "auditLog": "Audit Log",
+        "signupRequests": "Signup Requests",
+        "approve": "Approve",
+        "deny": "Deny",
+        "noRequests": "No pending signup requests.",
+        "by": "by"
+    },
+    "userRoles": {
+        "admin": "Admin",
+        "user": "User"
+    },
+    "dataTypes": {
+        "schedule": "Schedule Event",
+        "financials": "Financial Record",
+        "challenges": "Challenge",
+        "advantages": "Advantage",
+        "contacts": "Contact",
+        "tasks": "Task",
+        "users": "User",
+        "SignupRequest": "Signup Request"
+    },
+    "auditLogActions": {
+        "Created": "Created",
+        "Updated": "Updated",
+        "Deleted": "Deleted",
+        "Approved": "Approved",
+        "Denied": "Denied"
+    },
+    "detailModal": {
+        "details": "Details"
+    },
+    "editModal": {
+        "editTitle": "Edit {type}",
+        "new": {
+            "schedule": "New Schedule Event",
+            "financials": "New Financial Record",
+            "challenges": "New Challenge",
+            "advantages": "New Advantage",
+            "contacts": "New Contact",
+            "tasks": "New Task",
+            "users": "New User"
+        },
+        "participantsPlaceholder": "Comma-separated names"
+    },
+    "actions": {
+        "edit": "Edit",
+        "delete": "Delete",
+        "save": "Save",
+        "cancel": "Cancel"
+    },
+    "chatbot": {
+        "toggle": "Toggle Chatbot",
+        "header": "Dripfy AI Assistant",
+        "subtitle": "Ask about the data on your screen",
+        "initialMessage": "Hi! I'm Dripfy AI. How can I help you analyze your dashboard data today?",
+        "placeholder": "Ask a question...",
+        "send": "Send",
+        "error": "Sorry, I'm having trouble connecting. Please try again later.",
+        "clear": "Clear Chat",
+        "examplePrompts": "Example Prompts",
+        "prompt1": "Summarize next week's schedule.",
+        "prompt2": "Are there any high-priority tasks due soon?",
+        "prompt3": "List all contacts from Germany.",
+        "prompt4": "What are the biggest challenges we're facing?"
+    },
+    "footer": {
+        "links": "Links",
+        "imprint": "Imprint",
+        "privacy": "Privacy Policy",
+        "terms": "Terms & Conditions",
+        "followUs": "Follow Us",
+        "copyright": "© 2024 Dripfy GmbH. All Rights Reserved."
+    },
+    "profile": {
+        "menu": {
+            "profile": "Profile",
+            "settings": "Settings",
+            "privacy": "Privacy & Security",
+            "logout": "Logout"
+        }
+    },
+    "settings": {
+        "title": "Settings",
+        "closeButton": "Close",
+        "saveButton": "Save Changes",
+        "tabs": {
+            "profile": "Profile",
+            "settings": "General",
+            "privacy": "Privacy"
+        },
+        "profile": {
+            "title": "Profile Information",
+            "subtitle": "Update your personal details here.",
+            "name": "Full Name",
+            "email": "Email Address",
+            "password": "Password",
+            "changePassword": "Change Password"
+        },
+        "settings": {
+            "title": "General Settings",
+            "subtitle": "Customize your application experience.",
+            "language": "Language",
+            "darkMode": "Dark Mode",
+            "emailNotifications": "Email Notifications",
+            "pushNotifications": "Push Notifications"
+        },
+        "privacy": {
+            "title": "Privacy and Security",
+            "subtitle": "Manage your data and account security.",
+            "auditLog": "View Activity Log",
+            "exportData": "Export My Data",
+            "deleteAccount": "Delete My Account",
+            "deleteAccountConfirm": "Are you sure you want to delete your account? This action is permanent and cannot be undone."
+        }
+    },
+    "passwordChange": {
+        "title": "Change Password",
+        "subtitleEmail": "We'll send a verification code to your email to confirm your identity.",
+        "subtitleCode": "Enter the code we sent to {email} and your new password.",
+        "sendCodeButton": "Send Verification Code",
+        "updateButton": "Update Password",
+        "newPassword": "New Password",
+        "confirmPassword": "Confirm New Password",
+        "success": "Password updated successfully!",
+        "error": {
+            "code": "Invalid verification code.",
+            "match": "Passwords do not match."
+        }
+    },
+    "schedule": {
+        "title": "Title",
+        "day": "Day",
+        "time": "Time",
+        "participants": "Participants",
+        "type": "Type"
+    }
 }
