--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -1,187 +1,290 @@
+
 {
-  "login.subtitle": "Информационная система управления",
-  "login.emailPlaceholder": "Адрес электронной почты",
-  "login.passwordPlaceholder": "Пароль",
-  "login.signInButton": "Войти",
-  "login.welcome": "Добро пожаловать",
-  "signup.prompt": "Нет аккаунта? Зарегистрироваться",
-  "signup.loginPrompt": "Уже есть аккаунт? Войти",
-  "signup.namePlaceholder": "Полное имя",
-  "signup.emailPlaceholder": "Адрес электронной почты",
-  "signup.phonePlaceholder": "Номер телефона",
-  "signup.passwordPlaceholder": "Создайте пароль",
-  "signup.signUpButton": "Запросить доступ",
-  "tabs.calendar": "Календарь",
-  "tabs.financials": "Финансы",
-  "tabs.challenges": "Проблемы и преимущества",
-  "tabs.contacts": "Контакты",
-  "tabs.tasks": "Задачи",
-  "tabs.adminPanel": "Панель администратора",
-  "statCards.totalMeetings": "Всего встреч",
-  "statCards.meetingsThisWeek": "Встречи на этой неделе",
-  "statCards.pendingPayments": "Ожидающие платежи",
-  "statCards.startThisWeek": "Начиная с этой недели",
-  "statCards.activeEscrows": "Активные контакты",
-  "statCards.inCompensation": "Недавно добавленные",
-  "statCards.testCondition": "Выполнение задач",
-  "chatbot.initialMessage": "Здравствуйте! Чем я могу помочь вам сегодня с данными панели управления?",
-  "chatbot.prompt1": "Суммируйте мои задачи на сегодня.",
-  "chatbot.prompt2": "Какие платежи ожидаются?",
-  "chatbot.prompt3": "Покажите мне задачи с высоким приоритетом.",
-  "chatbot.prompt4": "Кто входит в медицинский совет?",
-  "chatbot.toggle": "Переключить чат-бота",
-  "chatbot.header": "ИИ-помощник Dripfy",
-  "chatbot.subtitle": "В сети",
-  "chatbot.clear": "Очистить чат",
-  "chatbot.error": "Извините, произошла ошибка.",
-  "chatbot.examplePrompts": "Примеры запросов",
-  "chatbot.placeholder": "Спросите о данных панели...",
-  "chatbot.send": "Отправить",
-  "profile.menu.profile": "Профиль",
-  "profile.menu.settings": "Настройки",
-  "profile.menu.privacy": "Конфиденциальность",
-  "profile.menu.logout": "Выйти",
-  "settings.title": "Настройки",
-  "settings.closeButton": "Закрыть",
-  "settings.saveButton": "Сохранить изменения",
-  "settings.tabs.profile": "Профиль",
-  "settings.tabs.settings": "Настройки",
-  "settings.tabs.privacy": "Конфиденциальность",
-  "settings.profile.title": "Личная информация",
-  "settings.profile.subtitle": "Обновите ваше фото и личные данные.",
-  "settings.profile.name": "Полное имя",
-  "settings.profile.email": "Адрес электронной почты",
-  "settings.profile.password": "Пароль",
-  "settings.profile.newPassword": "Новый пароль",
-  "settings.profile.confirmPassword": "Подтвердите новый пароль",
-  "settings.profile.changePassword": "Изменить пароль",
-  "settings.profile.role": "Роль",
-  "settings.settings.title": "Настройки приложения",
-  "settings.settings.subtitle": "Настройте свой опыт.",
-  "settings.settings.language": "Язык",
-  "settings.settings.darkMode": "Темный режим",
-  "settings.settings.emailNotifications": "Уведомления по электронной почте",
-  "settings.settings.pushNotifications": "Push-уведомления",
-  "settings.privacy.title": "Настройки конфиденциальности",
-  "settings.privacy.subtitle": "Управляйте своими данными и конфиденциальностью.",
-  "settings.privacy.auditLog": "Журнал активности",
-  "settings.privacy.exportData": "Экспортировать мои данные",
-  "settings.privacy.deleteAccount": "Удалить аккаунт",
-  "settings.privacy.exporting": "Экспорт...",
-  "settings.privacy.deleting": "Удаление...",
-  "days.monday": "Понедельник",
-  "days.tuesday": "Вторник",
-  "days.wednesday": "Среда",
-  "days.thursday": "Четверг",
-  "days.friday": "Пятница",
-  "days.saturday": "Суббота",
-  "days.sunday": "Воскресенье",
-  "daysShort.mon": "Пн",
-  "daysShort.tue": "Вт",
-  "daysShort.wed": "Ср",
-  "daysShort.thu": "Чт",
-  "daysShort.fri": "Пт",
-  "daysShort.sat": "Сб",
-  "daysShort.sun": "Вс",
-  "calendar.today": "Сегодня",
-  "calendar.month": "Месяц",
-  "calendar.week": "Неделя",
-  "calendar.newEvent": "Новое событие",
-  "calendar.addEventTo": "Добавить событие в",
-  "calendar.openPicker": "Открыть выбор даты",
-  "financials.newRecord": "Новая запись",
-  "financials.description": "Описание",
-  "financials.amount": "Сумма",
-  "financials.status": "Статус",
-  "financials.dueDate": "Срок",
-  "status.paid": "Оплачено",
-  "status.pending": "Ожидание",
-  "status.overdue": "Просрочено",
-  "challenges.title": "Проблемы",
-  "challenges.add": "Добавить проблему",
-  "advantages.title": "Преимущества",
-  "advantages.add": "Добавить преимущество",
-  "contacts.newContact": "Новый контакт",
-  "tasks.task": "Задача",
-  "tasks.assignee": "Исполнитель",
-  "tasks.priority": "Приоритет",
-  "tasks.status": "Статус",
-  "tasks.dueDate": "Срок выполнения",
-  "tasks.newTask": "Новая задача",
-  "priority.high": "Высокий",
-  "priority.medium": "Средний",
-  "priority.low": "Низкий",
-  "taskStatus.ToDo": "К выполнению",
-  "taskStatus.InProgress": "В процессе",
-  "taskStatus.Done": "Выполнено",
-  "admin.userPermissions": "Права пользователей",
-  "admin.auditLog": "Журнал аудита",
-  "admin.signupRequests": "Запросы на регистрацию",
-  "admin.by": "кем",
-  "admin.approve": "Одобрить",
-  "admin.deny": "Отклонить",
-  "admin.noRequests": "Нет ожидающих запросов на регистрацию.",
-  "userRoles.admin": "Администратор",
-  "userRoles.user": "Пользователь",
-  "auditLogActions.Created": "Создано",
-  "auditLogActions.Updated": "Обновлено",
-  "auditLogActions.Deleted": "Удалено",
-  "auditLogActions.Approved": "Одобрено",
-  "auditLogActions.Denied": "Отклонено",
-  "dataTypes.schedule": "Событие",
-  "dataTypes.financial": "Финансовая запись",
-  "dataTypes.challenge": "Проблема",
-  "dataTypes.advantage": "Преимущество",
-  "dataTypes.contact": "Контакт",
-  "dataTypes.task": "Задача",
-  "dataTypes.user": "Пользователь",
-  "dataTypes.SignupRequest": "Запрос на регистрацию",
-  "modal.createNew": "Создать",
-  "modal.edit": "Редактировать",
-  "modal.delete": "Удалить",
-  "modal.create": "Создать",
-  "modal.save": "Сохранить изменения",
-  "modal.noFields": "Нет редактируемых полей для этого типа элемента.",
-  "modal.type": "Тип",
-  "modal.status": "Статус",
-  "modal.dueDate": "Срок",
-  "modal.schedule.title": "Название",
-  "modal.schedule.day": "День",
-  "modal.schedule.time": "Время",
-  "modal.schedule.participants": "Участники (через запятую)",
-  "modal.financials.description": "Описание",
-  "modal.financials.amount": "Сумма (€)",
-  "modal.challenges.title": "Название",
-  "modal.challenges.description": "Описание",
-  "modal.challenges.severity": "Серьезность",
-  "modal.advantages.title": "Название",
-  "modal.advantages.description": "Описание",
-  "modal.contacts.name": "Имя",
-  "modal.contacts.role": "Роль",
-  "modal.contacts.email": "Эл. почта",
-  "modal.contacts.phone": "Телефон",
-  "modal.tasks.title": "Название",
-  "modal.tasks.assignee": "Исполнитель",
-  "modal.tasks.priority": "Приоритет",
-  "modal.users.name": "Имя",
-  "modal.users.email": "Эл. почта",
-  "modal.users.role": "Роль",
-  "footer.links": "Ссылки",
-  "footer.imprint": "Выходные данные",
-  "footer.privacy": "Политика конфиденциальности",
-  "footer.terms": "Условия использования",
-  "footer.followUs": "Следите за нами",
-  "footer.copyright": "© 2024 Dripfy GmbH. Все права защищены.",
-  "positions": {
-    "CEO": "Генеральный директор",
-    "CTO": "Технический директор",
-    "CFO": "Финансовый директор",
-    "COO": "Операционный директор",
-    "HeadofDepartment": "Начальник отдела",
-    "TeamLead": "Руководитель группы",
-    "ProjectManager": "Менеджер проекта",
-    "SeniorSpecialist": "Старший специалист",
-    "JuniorSpecialist": "Специалист",
-    "Intern": "Стажер"
-  }
+    "login": {
+        "welcome": "Добро пожаловать в",
+        "subtitle": "longevity by infusions",
+        "emailPlaceholder": "Адрес электронной почты",
+        "passwordPlaceholder": "Пароль",
+        "signInButton": "Войти",
+        "forgotPassword": "Забыли пароль?"
+    },
+    "signup": {
+        "prompt": "Нет аккаунта? Зарегистрироваться",
+        "loginPrompt": "Уже есть аккаунт? Войти",
+        "namePlaceholder": "Полное имя",
+        "emailPlaceholder": "Адрес электронной почты",
+        "phonePlaceholder": "Номер телефона",
+        "passwordPlaceholder": "Создать пароль",
+        "signUpButton": "Зарегистрироваться",
+        "requestReceived": "Запрос на регистрацию получен! Администратор скоро его рассмотрит."
+    },
+    "verify": {
+        "title": "Подтвердите свою почту",
+        "subtitle": "Мы отправили код подтверждения на {email}. Пожалуйста, введите его ниже.",
+        "codePlaceholder": "Код подтверждения",
+        "button": "Подтвердить и зарегистрироваться",
+        "backButton": "Назад к регистрации",
+        "invalidCode": "Неверный код подтверждения. Пожалуйста, попробуйте еще раз."
+    },
+    "positions": {
+        "CEO": "Генеральный директор",
+        "CTO": "Технический директор",
+        "CFO": "Финансовый директор",
+        "COO": "Операционный директор",
+        "HeadofDepartment": "Начальник отдела",
+        "TeamLead": "Руководитель группы",
+        "ProjectManager": "Менеджер проекта",
+        "SeniorSpecialist": "Старший специалист",
+        "JuniorSpecialist": "Младший специалист",
+        "Intern": "Стажер"
+    },
+    "dashboard": {
+        "title": "Панель управления"
+    },
+    "statCards": {
+        "totalMeetings": "Всего встреч",
+        "meetingsThisWeek": "Встречи на этой неделе",
+        "pendingPayments": "Ожидающие платежи",
+        "startThisWeek": "Начало на этой неделе",
+        "activeEscrows": "Активные эскроу",
+        "inCompensation": "В компенсации",
+        "testCondition": "Условие теста",
+        "progress": "Прогресс"
+    },
+    "tabs": {
+        "calendar": "Календарь",
+        "financials": "Финансы",
+        "challenges": "Проблемы и преимущества",
+        "contacts": "Контакты",
+        "tasks": "Задачи",
+        "adminPanel": "Панель администратора"
+    },
+    "calendar": {
+        "today": "Сегодня",
+        "month": "Месяц",
+        "week": "Неделя",
+        "newEvent": "Новое событие",
+        "openPicker": "Открыть выбор даты",
+        "addEventTo": "Добавить событие в"
+    },
+    "days": {
+        "monday": "Понедельник",
+        "tuesday": "Вторник",
+        "wednesday": "Среда",
+        "thursday": "Четверг",
+        "friday": "Пятница",
+        "saturday": "Суббота",
+        "sunday": "Воскресенье"
+    },
+    "daysShort": {
+        "mon": "Пн",
+        "tue": "Вт",
+        "wed": "Ср",
+        "thu": "Чт",
+        "fri": "Пт",
+        "sat": "Сб",
+        "sun": "Вс"
+    },
+    "financials": {
+        "description": "Описание",
+        "amount": "Сумма",
+        "status": "Статус",
+        "dueDate": "Срок оплаты",
+        "type": "Тип",
+        "newRecord": "Новая запись",
+        "incoming": "Входящий",
+        "outgoing": "Исходящий"
+    },
+    "challenges": {
+        "title": "Проблемы",
+        "add": "Добавить проблему",
+        "description": "Описание",
+        "severity": "Серьезность",
+        "severities": {
+            "high": "Высокая",
+            "medium": "Средняя",
+            "low": "Низкая"
+        }
+    },
+    "advantages": {
+        "title": "Преимущества",
+        "add": "Добавить преимущество",
+        "description": "Описание"
+    },
+    "contacts": {
+        "searchPlaceholder": "Поиск по имени, роли, городу...",
+        "newContact": "Новый контакт",
+        "sort": {
+            "firstNameAsc": "Имя (А-Я)",
+            "firstNameDesc": "Имя (Я-А)",
+            "lastNameAsc": "Фамилия (А-Я)",
+            "lastNameDesc": "Фамилия (Я-А)",
+            "countryAsc": "Страна (А-Я)",
+            "cityAsc": "Город (А-Я)",
+            "roleAsc": "Роль (А-Я)"
+        },
+        "firstName": "Имя",
+        "lastName": "Фамилия",
+        "email": "Эл. почта",
+        "role": "Роль",
+        "type": "Тип",
+        "country": "Страна",
+        "city": "Город",
+        "phone": "Телефон",
+        "address": "Адрес"
+    },
+    "tasks": {
+        "newTask": "Новая задача",
+        "title": "Название",
+        "priority": "Приоритет",
+        "status": "Статус",
+        "dueDate": "Срок выполнения",
+        "assignee": "Исполнитель"
+    },
+    "status": {
+        "paid": "Оплачено",
+        "pending": "В ожидании",
+        "overdue": "Просрочено",
+        "todo": "К выполнению",
+        "inprogress": "В процессе",
+        "done": "Выполнено"
+    },
+    "admin": {
+        "userPermissions": "Права пользователей",
+        "auditLog": "Журнал аудита",
+        "signupRequests": "Запросы на регистрацию",
+        "approve": "Одобрить",
+        "deny": "Отклонить",
+        "noRequests": "Нет ожидающих запросов на регистрацию.",
+        "by": ""
+    },
+    "userRoles": {
+        "admin": "Администратор",
+        "user": "Пользователь"
+    },
+    "dataTypes": {
+        "schedule": "Событие календаря",
+        "financials": "Финансовая запись",
+        "challenges": "Проблема",
+        "advantages": "Преимущество",
+        "contacts": "Контакт",
+        "tasks": "Задача",
+        "users": "Пользователь",
+        "SignupRequest": "Запрос на регистрацию"
+    },
+    "auditLogActions": {
+        "Created": "Создано",
+        "Updated": "Обновлено",
+        "Deleted": "Удалено",
+        "Approved": "Одобрено",
+        "Denied": "Отклонено"
+    },
+    "detailModal": {
+        "details": "Детали"
+    },
+    "editModal": {
+        "editTitle": "Редактировать {type}",
+        "new": {
+            "schedule": "Новое событие",
+            "financials": "Новая финансовая запись",
+            "challenges": "Новая проблема",
+            "advantages": "Новое преимущество",
+            "contacts": "Новый контакт",
+            "tasks": "Новая задача",
+            "users": "Новый пользователь"
+        },
+        "participantsPlaceholder": "Имена через запятую"
+    },
+    "actions": {
+        "edit": "Редактировать",
+        "delete": "Удалить",
+        "save": "Сохранить",
+        "cancel": "Отмена"
+    },
+    "chatbot": {
+        "toggle": "Переключить чат-бота",
+        "header": "Dripfy AI Ассистент",
+        "subtitle": "Спросите о данных на вашем экране",
+        "initialMessage": "Привет! Я Dripfy AI. Чем могу помочь вам сегодня в анализе данных панели управления?",
+        "placeholder": "Задайте вопрос...",
+        "send": "Отправить",
+        "error": "Извините, возникли проблемы с подключением. Пожалуйста, попробуйте позже.",
+        "clear": "Очистить чат",
+        "examplePrompts": "Примеры запросов",
+        "prompt1": "Сводка расписания на следующую неделю.",
+        "prompt2": "Есть ли задачи с высоким приоритетом, которые скоро нужно выполнить?",
+        "prompt3": "Перечислить все контакты из Германии.",
+        "prompt4": "Каковы наши самые большие проблемы?"
+    },
+    "footer": {
+        "links": "Ссылки",
+        "imprint": "Выходные данные",
+        "privacy": "Политика конфиденциальности",
+        "terms": "Условия и положения",
+        "followUs": "Подписывайтесь на нас",
+        "copyright": "© 2024 Dripfy GmbH. Все права защищены."
+    },
+    "profile": {
+        "menu": {
+            "profile": "Профиль",
+            "settings": "Настройки",
+            "privacy": "Конфиденциальность и безопасность",
+            "logout": "Выйти"
+        }
+    },
+    "settings": {
+        "title": "Настройки",
+        "closeButton": "Закрыть",
+        "saveButton": "Сохранить изменения",
+        "tabs": {
+            "profile": "Профиль",
+            "settings": "Общие",
+            "privacy": "Конфиденциальность"
+        },
+        "profile": {
+            "title": "Информация профиля",
+            "subtitle": "Обновите здесь свои личные данные.",
+            "name": "Полное имя",
+            "email": "Адрес электронной почты",
+            "password": "Пароль",
+            "changePassword": "Изменить пароль"
+        },
+        "settings": {
+            "title": "Общие настройки",
+            "subtitle": "Настройте свой опыт работы с приложением.",
+            "language": "Язык",
+            "darkMode": "Темный режим",
+            "emailNotifications": "Уведомления по почте",
+            "pushNotifications": "Push-уведомления"
+        },
+        "privacy": {
+            "title": "Конфиденциальность и безопасность",
+            "subtitle": "Управляйте своими данными и безопасностью аккаунта.",
+            "auditLog": "Просмотреть журнал активности",
+            "exportData": "Экспортировать мои данные",
+            "deleteAccount": "Удалить мой аккаунт",
+            "deleteAccountConfirm": "Вы уверены, что хотите удалить свою учетную запись? Это действие является необратимым и не может быть отменено."
+        }
+    },
+    "passwordChange": {
+        "title": "Изменить пароль",
+        "subtitleEmail": "Мы отправим код подтверждения на вашу почту для подтверждения личности.",
+        "subtitleCode": "Введите код, который мы отправили на {email}, и ваш новый пароль.",
+        "sendCodeButton": "Отправить код подтверждения",
+        "updateButton": "Обновить пароль",
+        "newPassword": "Новый пароль",
+        "confirmPassword": "Подтвердите новый пароль",
+        "success": "Пароль успешно обновлен!",
+        "error": {
+            "code": "Неверный код подтверждения.",
+            "match": "Пароли не совпадают."
+        }
+    },
+    "schedule": {
+        "title": "Название",
+        "day": "День",
+        "time": "Время",
+        "participants": "Участники",
+        "type": "Тип"
+    }
 }
