--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -1,187 +1,290 @@
+
 {
-  "login.subtitle": "نظام معلومات الإدارة",
-  "login.emailPlaceholder": "البريد الإلكتروني",
-  "login.passwordPlaceholder": "كلمة المرور",
-  "login.signInButton": "تسجيل الدخول",
-  "login.welcome": "أهلاً وسهلاً",
-  "signup.prompt": "ليس لديك حساب؟ اشتراك",
-  "signup.loginPrompt": "هل لديك حساب بالفعل؟ تسجيل الدخول",
-  "signup.namePlaceholder": "الاسم الكامل",
-  "signup.emailPlaceholder": "البريد الإلكتروني",
-  "signup.phonePlaceholder": "رقم الهاتف",
-  "signup.passwordPlaceholder": "أنشئ كلمة مرور",
-  "signup.signUpButton": "طلب وصول",
-  "tabs.calendar": "التقويم",
-  "tabs.financials": "المالية",
-  "tabs.challenges": "التحديات والمزايا",
-  "tabs.contacts": "جهات الاتصال",
-  "tabs.tasks": "المهام",
-  "tabs.adminPanel": "لوحة التحكم",
-  "statCards.totalMeetings": "إجمالي الاجتماعات",
-  "statCards.meetingsThisWeek": "اجتماعات هذا الأسبوع",
-  "statCards.pendingPayments": "المدفوعات المعلقة",
-  "statCards.startThisWeek": "يبدأ هذا الأسبوع",
-  "statCards.activeEscrows": "جهات الاتصال النشطة",
-  "statCards.inCompensation": "أضيف مؤخراً",
-  "statCards.testCondition": "إنجاز المهام",
-  "chatbot.initialMessage": "مرحبًا! كيف يمكنني مساعدتك في بيانات لوحة القيادة اليوم؟",
-  "chatbot.prompt1": "لخص مهامي لهذا اليوم.",
-  "chatbot.prompt2": "ما هي المدفوعات المعلقة؟",
-  "chatbot.prompt3": "أرني المهام ذات الأولوية العالية.",
-  "chatbot.prompt4": "من في المجلس الطبي؟",
-  "chatbot.toggle": "تبديل روبوت المحادثة",
-  "chatbot.header": "مساعد Dripfy الذكي",
-  "chatbot.subtitle": "متصل",
-  "chatbot.clear": "مسح المحادثة",
-  "chatbot.error": "عذراً، حدث خطأ.",
-  "chatbot.examplePrompts": "أمثلة على الأسئلة",
-  "chatbot.placeholder": "اسأل عن بيانات اللوحة...",
-  "chatbot.send": "إرسال",
-  "profile.menu.profile": "الملف الشخصي",
-  "profile.menu.settings": "الإعدادات",
-  "profile.menu.privacy": "الخصوصية",
-  "profile.menu.logout": "تسجيل الخروج",
-  "settings.title": "الإعدادات",
-  "settings.closeButton": "إغلاق",
-  "settings.saveButton": "حفظ التغييرات",
-  "settings.tabs.profile": "الملف الشخصي",
-  "settings.tabs.settings": "الإعدادات",
-  "settings.tabs.privacy": "الخصوصية",
-  "settings.profile.title": "المعلومات الشخصية",
-  "settings.profile.subtitle": "قم بتحديث صورتك وتفاصيلك الشخصية.",
-  "settings.profile.name": "الاسم الكامل",
-  "settings.profile.email": "البريد الإلكتروني",
-  "settings.profile.password": "كلمة المرور",
-  "settings.profile.newPassword": "كلمة المرور الجديدة",
-  "settings.profile.confirmPassword": "تأكيد كلمة المرور الجديدة",
-  "settings.profile.changePassword": "تغيير كلمة المرور",
-  "settings.profile.role": "الدور",
-  "settings.settings.title": "إعدادات التطبيق",
-  "settings.settings.subtitle": "خصص تجربتك.",
-  "settings.settings.language": "اللغة",
-  "settings.settings.darkMode": "الوضع الداكن",
-  "settings.settings.emailNotifications": "إشعارات البريد الإلكتروني",
-  "settings.settings.pushNotifications": "الإشعارات الفورية",
-  "settings.privacy.title": "إعدادات الخصوصية",
-  "settings.privacy.subtitle": "إدارة بياناتك وخصوصيتك.",
-  "settings.privacy.auditLog": "سجل النشاط",
-  "settings.privacy.exportData": "تصدير بياناتي",
-  "settings.privacy.deleteAccount": "حذف الحساب",
-  "settings.privacy.exporting": "جاري التصدير...",
-  "settings.privacy.deleting": "جاري الحذف...",
-  "days.monday": "الاثنين",
-  "days.tuesday": "الثلاثاء",
-  "days.wednesday": "الأربعاء",
-  "days.thursday": "الخميس",
-  "days.friday": "الجمعة",
-  "days.saturday": "السبت",
-  "days.sunday": "الأحد",
-  "daysShort.mon": "إثن",
-  "daysShort.tue": "ثلا",
-  "daysShort.wed": "أرب",
-  "daysShort.thu": "خمي",
-  "daysShort.fri": "جمع",
-  "daysShort.sat": "سبت",
-  "daysShort.sun": "أحد",
-  "calendar.today": "اليوم",
-  "calendar.month": "شهر",
-  "calendar.week": "أسبوع",
-  "calendar.newEvent": "حدث جديد",
-  "calendar.addEventTo": "إضافة حدث إلى",
-  "calendar.openPicker": "فتح منتقي التاريخ",
-  "financials.newRecord": "سجل جديد",
-  "financials.description": "الوصف",
-  "financials.amount": "المبلغ",
-  "financials.status": "الحالة",
-  "financials.dueDate": "تاريخ الاستحقاق",
-  "status.paid": "مدفوع",
-  "status.pending": "قيد الانتظار",
-  "status.overdue": "متأخر",
-  "challenges.title": "التحديات",
-  "challenges.add": "إضافة تحدي",
-  "advantages.title": "المزايا",
-  "advantages.add": "إضافة ميزة",
-  "contacts.newContact": "جهة اتصال جديدة",
-  "tasks.task": "المهمة",
-  "tasks.assignee": "المكلف",
-  "tasks.priority": "الأولوية",
-  "tasks.status": "الحالة",
-  "tasks.dueDate": "تاريخ الاستحقاق",
-  "tasks.newTask": "مهمة جديدة",
-  "priority.high": "عالية",
-  "priority.medium": "متوسطة",
-  "priority.low": "منخفضة",
-  "taskStatus.ToDo": "للقيام به",
-  "taskStatus.InProgress": "قيد التنفيذ",
-  "taskStatus.Done": "تم",
-  "admin.userPermissions": "أذونات المستخدم",
-  "admin.auditLog": "سجل التدقيق",
-  "admin.signupRequests": "طلبات التسجيل",
-  "admin.by": "بواسطة",
-  "admin.approve": "موافقة",
-  "admin.deny": "رفض",
-  "admin.noRequests": "لا توجد طلبات تسجيل معلقة.",
-  "userRoles.admin": "مدير",
-  "userRoles.user": "مستخدم",
-  "auditLogActions.Created": "تم الإنشاء",
-  "auditLogActions.Updated": "تم التحديث",
-  "auditLogActions.Deleted": "تم الحذف",
-  "auditLogActions.Approved": "تمت الموافقة",
-  "auditLogActions.Denied": "تم الرفض",
-  "dataTypes.schedule": "حدث",
-  "dataTypes.financial": "سجل مالي",
-  "dataTypes.challenge": "تحدي",
-  "dataTypes.advantage": "ميزة",
-  "dataTypes.contact": "جهة اتصال",
-  "dataTypes.task": "مهمة",
-  "dataTypes.user": "مستخدم",
-  "dataTypes.SignupRequest": "طلب تسجيل",
-  "modal.createNew": "إنشاء جديد",
-  "modal.edit": "تعديل",
-  "modal.delete": "حذف",
-  "modal.create": "إنشاء",
-  "modal.save": "حفظ التغييرات",
-  "modal.noFields": "لا توجد حقول قابلة للتعديل لهذا النوع من العناصر.",
-  "modal.type": "النوع",
-  "modal.status": "الحالة",
-  "modal.dueDate": "تاريخ الاستحقاق",
-  "modal.schedule.title": "العنوان",
-  "modal.schedule.day": "اليوم",
-  "modal.schedule.time": "الوقت",
-  "modal.schedule.participants": "المشاركون (مفصولون بفاصلة)",
-  "modal.financials.description": "الوصف",
-  "modal.financials.amount": "المبلغ (€)",
-  "modal.challenges.title": "العنوان",
-  "modal.challenges.description": "الوصف",
-  "modal.challenges.severity": "الخطورة",
-  "modal.advantages.title": "العنوان",
-  "modal.advantages.description": "الوصف",
-  "modal.contacts.name": "الاسم",
-  "modal.contacts.role": "الدور",
-  "modal.contacts.email": "البريد الإلكتروني",
-  "modal.contacts.phone": "الهاتف",
-  "modal.tasks.title": "العنوان",
-  "modal.tasks.assignee": "المكلف",
-  "modal.tasks.priority": "الأولوية",
-  "modal.users.name": "الاسم",
-  "modal.users.email": "البريد الإلكتروني",
-  "modal.users.role": "الدور",
-  "footer.links": "روابط",
-  "footer.imprint": "البصمة",
-  "footer.privacy": "سياسة الخصوصية",
-  "footer.terms": "الشروط والأحكام",
-  "footer.followUs": "تابعنا",
-  "footer.copyright": "© 2024 Dripfy GmbH. كل الحقوق محفوظة.",
-  "positions": {
-    "CEO": "الرئيس التنفيذي",
-    "CTO": "المدير التقني",
-    "CFO": "المدير المالي",
-    "COO": "مدير العمليات",
-    "HeadofDepartment": "رئيس القسم",
-    "TeamLead": "قائد الفريق",
-    "ProjectManager": "مدير المشروع",
-    "SeniorSpecialist": "أخصائي أول",
-    "JuniorSpecialist": "أخصائي",
-    "Intern": "متدرب"
-  }
+    "login": {
+        "welcome": "أهلاً بك في",
+        "subtitle": "longevity by infusions",
+        "emailPlaceholder": "البريد الإلكتروني",
+        "passwordPlaceholder": "كلمة المرور",
+        "signInButton": "تسجيل الدخول",
+        "forgotPassword": "هل نسيت كلمة المرور؟"
+    },
+    "signup": {
+        "prompt": "ليس لديك حساب؟ سجل الآن",
+        "loginPrompt": "هل لديك حساب بالفعل؟ تسجيل الدخول",
+        "namePlaceholder": "الاسم الكامل",
+        "emailPlaceholder": "البريد الإلكتروني",
+        "phonePlaceholder": "رقم الهاتف",
+        "passwordPlaceholder": "أنشئ كلمة مرور",
+        "signUpButton": "تسجيل",
+        "requestReceived": "تم استلام طلب التسجيل! سيقوم المسؤول بمراجعته قريبًا."
+    },
+    "verify": {
+        "title": "تحقق من بريدك الإلكتروني",
+        "subtitle": "أرسلنا رمز التحقق إلى {email}. يرجى إدخاله أدناه.",
+        "codePlaceholder": "رمز التحقق",
+        "button": "تحقق وسجل",
+        "backButton": "العودة إلى التسجيل",
+        "invalidCode": "رمز التحقق غير صالح. يرجى المحاولة مرة أخرى."
+    },
+    "positions": {
+        "CEO": "الرئيس التنفيذي",
+        "CTO": "المدير التقني",
+        "CFO": "المدير المالي",
+        "COO": "مدير العمليات",
+        "HeadofDepartment": "رئيس القسم",
+        "TeamLead": "قائد الفريق",
+        "ProjectManager": "مدير المشروع",
+        "SeniorSpecialist": "أخصائي أول",
+        "JuniorSpecialist": "أخصائي مبتدئ",
+        "Intern": "متدرب"
+    },
+    "dashboard": {
+        "title": "لوحة التحكم"
+    },
+    "statCards": {
+        "totalMeetings": "إجمالي الاجتماعات",
+        "meetingsThisWeek": "اجتماعات تبدأ هذا الأسبوع",
+        "pendingPayments": "المدفوعات المعلقة",
+        "startThisWeek": "بداية هذا الأسبوع",
+        "activeEscrows": "الضمانات النشطة",
+        "inCompensation": "في التعويض",
+        "testCondition": "شرط الاختبار",
+        "progress": "التقدم"
+    },
+    "tabs": {
+        "calendar": "التقويم",
+        "financials": "المالية",
+        "challenges": "التحديات والمزايا",
+        "contacts": "جهات الاتصال",
+        "tasks": "المهام",
+        "adminPanel": "لوحة الإدارة"
+    },
+    "calendar": {
+        "today": "اليوم",
+        "month": "شهر",
+        "week": "أسبوع",
+        "newEvent": "حدث جديد",
+        "openPicker": "افتح منتقي التاريخ",
+        "addEventTo": "أضف حدثًا إلى"
+    },
+    "days": {
+        "monday": "الاثنين",
+        "tuesday": "الثلاثاء",
+        "wednesday": "الأربعاء",
+        "thursday": "الخميس",
+        "friday": "الجمعة",
+        "saturday": "السبت",
+        "sunday": "الأحد"
+    },
+    "daysShort": {
+        "mon": "إثن",
+        "tue": "ثلا",
+        "wed": "أرب",
+        "thu": "خمي",
+        "fri": "جمع",
+        "sat": "سبت",
+        "sun": "أحد"
+    },
+    "financials": {
+        "description": "الوصف",
+        "amount": "المبلغ",
+        "status": "الحالة",
+        "dueDate": "تاريخ الاستحقاق",
+        "type": "النوع",
+        "newRecord": "سجل جديد",
+        "incoming": "وارد",
+        "outgoing": "صادر"
+    },
+    "challenges": {
+        "title": "التحديات",
+        "add": "إضافة تحدي",
+        "description": "الوصف",
+        "severity": "الخطورة",
+        "severities": {
+            "high": "عالية",
+            "medium": "متوسطة",
+            "low": "منخفضة"
+        }
+    },
+    "advantages": {
+        "title": "المزايا",
+        "add": "إضافة ميزة",
+        "description": "الوصف"
+    },
+    "contacts": {
+        "searchPlaceholder": "ابحث بالاسم، الدور، المدينة...",
+        "newContact": "جهة اتصال جديدة",
+        "sort": {
+            "firstNameAsc": "الاسم الأول (أ-ي)",
+            "firstNameDesc": "الاسم الأول (ي-أ)",
+            "lastNameAsc": "الاسم الأخير (أ-ي)",
+            "lastNameDesc": "الاسم الأخير (ي-أ)",
+            "countryAsc": "الدولة (أ-ي)",
+            "cityAsc": "المدينة (أ-ي)",
+            "roleAsc": "الدور (أ-ي)"
+        },
+        "firstName": "الاسم الأول",
+        "lastName": "الاسم الأخير",
+        "email": "البريد الإلكتروني",
+        "role": "الدور",
+        "type": "النوع",
+        "country": "الدولة",
+        "city": "المدينة",
+        "phone": "الهاتف",
+        "address": "العنوان"
+    },
+    "tasks": {
+        "newTask": "مهمة جديدة",
+        "title": "العنوان",
+        "priority": "الأولوية",
+        "status": "الحالة",
+        "dueDate": "تاريخ الاستحقاق",
+        "assignee": "المكلف"
+    },
+    "status": {
+        "paid": "مدفوع",
+        "pending": "معلق",
+        "overdue": "متأخر",
+        "todo": "للقيام به",
+        "inprogress": "قيد التنفيذ",
+        "done": "تم"
+    },
+    "admin": {
+        "userPermissions": "أذونات المستخدم",
+        "auditLog": "سجل التدقيق",
+        "signupRequests": "طلبات التسجيل",
+        "approve": "موافقة",
+        "deny": "رفض",
+        "noRequests": "لا توجد طلبات تسجيل معلقة.",
+        "by": "بواسطة"
+    },
+    "userRoles": {
+        "admin": "مسؤول",
+        "user": "مستخدم"
+    },
+    "dataTypes": {
+        "schedule": "حدث تقويم",
+        "financials": "سجل مالي",
+        "challenges": "تحدي",
+        "advantages": "ميزة",
+        "contacts": "جهة اتصال",
+        "tasks": "مهمة",
+        "users": "مستخدم",
+        "SignupRequest": "طلب تسجيل"
+    },
+    "auditLogActions": {
+        "Created": "تم الإنشاء",
+        "Updated": "تم التحديث",
+        "Deleted": "تم الحذف",
+        "Approved": "تمت الموافقة",
+        "Denied": "تم الرفض"
+    },
+    "detailModal": {
+        "details": "التفاصيل"
+    },
+    "editModal": {
+        "editTitle": "تعديل {type}",
+        "new": {
+            "schedule": "حدث تقويم جديد",
+            "financials": "سجل مالي جديد",
+            "challenges": "تحدي جديد",
+            "advantages": "ميزة جديدة",
+            "contacts": "جهة اتصال جديدة",
+            "tasks": "مهمة جديدة",
+            "users": "مستخدم جديد"
+        },
+        "participantsPlaceholder": "أسماء مفصولة بفواصل"
+    },
+    "actions": {
+        "edit": "تعديل",
+        "delete": "حذف",
+        "save": "حفظ",
+        "cancel": "إلغاء"
+    },
+    "chatbot": {
+        "toggle": "تبديل الشات بوت",
+        "header": "مساعد Dripfy الذكي",
+        "subtitle": "اسأل عن البيانات على شاشتك",
+        "initialMessage": "مرحبًا! أنا Dripfy AI. كيف يمكنني مساعدتك في تحليل بيانات لوحة التحكم اليوم؟",
+        "placeholder": "اطرح سؤالاً...",
+        "send": "إرسال",
+        "error": "عذراً، أواجه مشكلة في الاتصال. يرجى المحاولة لاحقًا.",
+        "clear": "مسح المحادثة",
+        "examplePrompts": "أمثلة على الأسئلة",
+        "prompt1": "لخص جدول الأسبوع القادم.",
+        "prompt2": "هل هناك أي مهام ذات أولوية عالية تستحق قريباً؟",
+        "prompt3": "اذكر جميع جهات الاتصال من ألمانيا.",
+        "prompt4": "ما هي أكبر التحديات التي نواجهها؟"
+    },
+    "footer": {
+        "links": "روابط",
+        "imprint": "بيانات النشر",
+        "privacy": "سياسة الخصوصية",
+        "terms": "الشروط والأحكام",
+        "followUs": "تابعنا",
+        "copyright": "© 2024 Dripfy GmbH. جميع الحقوق محفوظة."
+    },
+    "profile": {
+        "menu": {
+            "profile": "الملف الشخصي",
+            "settings": "الإعدادات",
+            "privacy": "الخصوصية والأمان",
+            "logout": "تسجيل الخروج"
+        }
+    },
+    "settings": {
+        "title": "الإعدادات",
+        "closeButton": "إغلاق",
+        "saveButton": "حفظ التغييرات",
+        "tabs": {
+            "profile": "الملف الشخصي",
+            "settings": "عام",
+            "privacy": "الخصوصية"
+        },
+        "profile": {
+            "title": "معلومات الملف الشخصي",
+            "subtitle": "قم بتحديث تفاصيلك الشخصية هنا.",
+            "name": "الاسم الكامل",
+            "email": "البريد الإلكتروني",
+            "password": "كلمة المرور",
+            "changePassword": "تغيير كلمة المرور"
+        },
+        "settings": {
+            "title": "الإعدادات العامة",
+            "subtitle": "قم بتخصيص تجربة التطبيق الخاصة بك.",
+            "language": "اللغة",
+            "darkMode": "الوضع الداكن",
+            "emailNotifications": "إشعارات البريد الإلكتروني",
+            "pushNotifications": "الإشعارات الفورية"
+        },
+        "privacy": {
+            "title": "الخصوصية والأمان",
+            "subtitle": "إدارة بياناتك وأمان حسابك.",
+            "auditLog": "عرض سجل النشاط",
+            "exportData": "تصدير بياناتي",
+            "deleteAccount": "حذف حسابي",
+            "deleteAccountConfirm": "هل أنت متأكد أنك تريد حذف حسابك؟ هذا الإجراء دائم ولا يمكن التراجع عنه."
+        }
+    },
+    "passwordChange": {
+        "title": "تغيير كلمة المرور",
+        "subtitleEmail": "سنرسل رمز تحقق إلى بريدك الإلكتروني لتأكيد هويتك.",
+        "subtitleCode": "أدخل الرمز الذي أرسلناه إلى {email} وكلمة المرور الجديدة.",
+        "sendCodeButton": "إرسال رمز التحقق",
+        "updateButton": "تحديث كلمة المرور",
+        "newPassword": "كلمة المرور الجديدة",
+        "confirmPassword": "تأكيد كلمة المرور الجديدة",
+        "success": "تم تحديث كلمة المرور بنجاح!",
+        "error": {
+            "code": "رمز التحقق غير صالح.",
+            "match": "كلمات المرور غير متطابقة."
+        }
+    },
+    "schedule": {
+        "title": "العنوان",
+        "day": "اليوم",
+        "time": "الوقت",
+        "participants": "المشاركون",
+        "type": "النوع"
+    }
 }
