--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -1,187 +1,290 @@
+
 {
-  "login.subtitle": "Management-Informationssystem",
-  "login.emailPlaceholder": "E-Mail-Adresse",
-  "login.passwordPlaceholder": "Passwort",
-  "login.signInButton": "Anmelden",
-  "login.welcome": "Willkommen",
-  "signup.prompt": "Kein Konto? Registrieren",
-  "signup.loginPrompt": "Bereits ein Konto? Anmelden",
-  "signup.namePlaceholder": "Vollständiger Name",
-  "signup.emailPlaceholder": "E-Mail-Adresse",
-  "signup.phonePlaceholder": "Telefonnummer",
-  "signup.passwordPlaceholder": "Passwort erstellen",
-  "signup.signUpButton": "Zugriff anfordern",
-  "tabs.calendar": "Kalender",
-  "tabs.financials": "Finanzen",
-  "tabs.challenges": "Herausforderungen & Vorteile",
-  "tabs.contacts": "Kontakte",
-  "tabs.tasks": "Aufgaben",
-  "tabs.adminPanel": "Admin-Panel",
-  "statCards.totalMeetings": "Gesamte Meetings",
-  "statCards.meetingsThisWeek": "Meetings diese Woche",
-  "statCards.pendingPayments": "Ausstehende Zahlungen",
-  "statCards.startThisWeek": "Beginn diese Woche",
-  "statCards.activeEscrows": "Aktive Kontakte",
-  "statCards.inCompensation": "Kürzlich hinzugefügt",
-  "statCards.testCondition": "Aufgabenerfüllung",
-  "chatbot.initialMessage": "Hallo! Wie kann ich Ihnen heute mit den Dashboard-Daten helfen?",
-  "chatbot.prompt1": "Fassen Sie meine heutigen Aufgaben zusammen.",
-  "chatbot.prompt2": "Welche Zahlungen sind ausstehend?",
-  "chatbot.prompt3": "Zeigen Sie mir Aufgaben mit hoher Priorität.",
-  "chatbot.prompt4": "Wer ist im medizinischen Beirat?",
-  "chatbot.toggle": "Chatbot umschalten",
-  "chatbot.header": "Dripfy KI-Assistent",
-  "chatbot.subtitle": "Online",
-  "chatbot.clear": "Chat leeren",
-  "chatbot.error": "Entschuldigung, ein Fehler ist aufgetreten.",
-  "chatbot.examplePrompts": "Beispielanfragen",
-  "chatbot.placeholder": "Fragen Sie nach Dashboard-Daten...",
-  "chatbot.send": "Senden",
-  "profile.menu.profile": "Profil",
-  "profile.menu.settings": "Einstellungen",
-  "profile.menu.privacy": "Datenschutz",
-  "profile.menu.logout": "Abmelden",
-  "settings.title": "Einstellungen",
-  "settings.closeButton": "Schließen",
-  "settings.saveButton": "Änderungen speichern",
-  "settings.tabs.profile": "Profil",
-  "settings.tabs.settings": "Einstellungen",
-  "settings.tabs.privacy": "Datenschutz",
-  "settings.profile.title": "Persönliche Informationen",
-  "settings.profile.subtitle": "Aktualisieren Sie Ihr Foto und Ihre persönlichen Daten.",
-  "settings.profile.name": "Vollständiger Name",
-  "settings.profile.email": "E-Mail-Adresse",
-  "settings.profile.password": "Passwort",
-  "settings.profile.newPassword": "Neues Passwort",
-  "settings.profile.confirmPassword": "Neues Passwort bestätigen",
-  "settings.profile.changePassword": "Passwort ändern",
-  "settings.profile.role": "Rolle",
-  "settings.settings.title": "Anwendungseinstellungen",
-  "settings.settings.subtitle": "Passen Sie Ihre Erfahrung an.",
-  "settings.settings.language": "Sprache",
-  "settings.settings.darkMode": "Dunkelmodus",
-  "settings.settings.emailNotifications": "E-Mail-Benachrichtigungen",
-  "settings.settings.pushNotifications": "Push-Benachrichtigungen",
-  "settings.privacy.title": "Datenschutzeinstellungen",
-  "settings.privacy.subtitle": "Verwalten Sie Ihre Daten und Ihren Datenschutz.",
-  "settings.privacy.auditLog": "Aktivitätsprotokoll",
-  "settings.privacy.exportData": "Meine Daten exportieren",
-  "settings.privacy.deleteAccount": "Konto löschen",
-  "settings.privacy.exporting": "Exportiere...",
-  "settings.privacy.deleting": "Lösche...",
-  "days.monday": "Montag",
-  "days.tuesday": "Dienstag",
-  "days.wednesday": "Mittwoch",
-  "days.thursday": "Donnerstag",
-  "days.friday": "Freitag",
-  "days.saturday": "Samstag",
-  "days.sunday": "Sonntag",
-  "daysShort.mon": "Mo",
-  "daysShort.tue": "Di",
-  "daysShort.wed": "Mi",
-  "daysShort.thu": "Do",
-  "daysShort.fri": "Fr",
-  "daysShort.sat": "Sa",
-  "daysShort.sun": "So",
-  "calendar.today": "Heute",
-  "calendar.month": "Monat",
-  "calendar.week": "Woche",
-  "calendar.newEvent": "Neues Ereignis",
-  "calendar.addEventTo": "Ereignis hinzufügen zu",
-  "calendar.openPicker": "Datumsauswahl öffnen",
-  "financials.newRecord": "Neuer Eintrag",
-  "financials.description": "Beschreibung",
-  "financials.amount": "Betrag",
-  "financials.status": "Status",
-  "financials.dueDate": "Fälligkeitsdatum",
-  "status.paid": "Bezahlt",
-  "status.pending": "Ausstehend",
-  "status.overdue": "Überfällig",
-  "challenges.title": "Herausforderungen",
-  "challenges.add": "Herausforderung hinzufügen",
-  "advantages.title": "Vorteile",
-  "advantages.add": "Vorteil hinzufügen",
-  "contacts.newContact": "Neuer Kontakt",
-  "tasks.task": "Aufgabe",
-  "tasks.assignee": "Zuständig",
-  "tasks.priority": "Priorität",
-  "tasks.status": "Status",
-  "tasks.dueDate": "Fälligkeitsdatum",
-  "tasks.newTask": "Neue Aufgabe",
-  "priority.high": "Hoch",
-  "priority.medium": "Mittel",
-  "priority.low": "Niedrig",
-  "taskStatus.ToDo": "Zu erledigen",
-  "taskStatus.InProgress": "In Bearbeitung",
-  "taskStatus.Done": "Erledigt",
-  "admin.userPermissions": "Benutzerberechtigungen",
-  "admin.auditLog": "Prüfungsprotokoll",
-  "admin.signupRequests": "Registrierungsanfragen",
-  "admin.by": "von",
-  "admin.approve": "Genehmigen",
-  "admin.deny": "Ablehnen",
-  "admin.noRequests": "Keine ausstehenden Registrierungsanfragen.",
-  "userRoles.admin": "Admin",
-  "userRoles.user": "Benutzer",
-  "auditLogActions.Created": "Erstellt",
-  "auditLogActions.Updated": "Aktualisiert",
-  "auditLogActions.Deleted": "Gelöscht",
-  "auditLogActions.Approved": "Genehmigt",
-  "auditLogActions.Denied": "Abgelehnt",
-  "dataTypes.schedule": "Ereignis",
-  "dataTypes.financial": "Finanzeintrag",
-  "dataTypes.challenge": "Herausforderung",
-  "dataTypes.advantage": "Vorteil",
-  "dataTypes.contact": "Kontakt",
-  "dataTypes.task": "Aufgabe",
-  "dataTypes.user": "Benutzer",
-  "dataTypes.SignupRequest": "Registrierungsanfrage",
-  "modal.createNew": "Neu erstellen",
-  "modal.edit": "Bearbeiten",
-  "modal.delete": "Löschen",
-  "modal.create": "Erstellen",
-  "modal.save": "Änderungen speichern",
-  "modal.noFields": "Keine bearbeitbaren Felder für diesen Elementtyp.",
-  "modal.type": "Typ",
-  "modal.status": "Status",
-  "modal.dueDate": "Fälligkeitsdatum",
-  "modal.schedule.title": "Titel",
-  "modal.schedule.day": "Tag",
-  "modal.schedule.time": "Uhrzeit",
-  "modal.schedule.participants": "Teilnehmer (mit Komma trennen)",
-  "modal.financials.description": "Beschreibung",
-  "modal.financials.amount": "Betrag (€)",
-  "modal.challenges.title": "Titel",
-  "modal.challenges.description": "Beschreibung",
-  "modal.challenges.severity": "Schweregrad",
-  "modal.advantages.title": "Titel",
-  "modal.advantages.description": "Beschreibung",
-  "modal.contacts.name": "Name",
-  "modal.contacts.role": "Rolle",
-  "modal.contacts.email": "E-Mail",
-  "modal.contacts.phone": "Telefon",
-  "modal.tasks.title": "Titel",
-  "modal.tasks.assignee": "Zuständig",
-  "modal.tasks.priority": "Priorität",
-  "modal.users.name": "Name",
-  "modal.users.email": "E-Mail",
-  "modal.users.role": "Rolle",
-  "footer.links": "Links",
-  "footer.imprint": "Impressum",
-  "footer.privacy": "Datenschutz",
-  "footer.terms": "AGB",
-  "footer.followUs": "Folgen Sie uns",
-  "footer.copyright": "© 2024 Dripfy GmbH. Alle Rechte vorbehalten.",
-  "positions": {
-    "CEO": "CEO",
-    "CTO": "CTO",
-    "CFO": "CFO",
-    "COO": "COO",
-    "HeadofDepartment": "Abteilungsleiter",
-    "TeamLead": "Teamleiter",
-    "ProjectManager": "Projektmanager",
-    "SeniorSpecialist": "Senior-Spezialist",
-    "JuniorSpecialist": "Spezialist",
-    "Intern": "Praktikant"
-  }
+    "login": {
+        "welcome": "Willkommen bei",
+        "subtitle": "longevity by infusions",
+        "emailPlaceholder": "E-Mail-Adresse",
+        "passwordPlaceholder": "Passwort",
+        "signInButton": "Anmelden",
+        "forgotPassword": "Passwort vergessen?"
+    },
+    "signup": {
+        "prompt": "Kein Konto? Registrieren",
+        "loginPrompt": "Bereits ein Konto? Anmelden",
+        "namePlaceholder": "Vollständiger Name",
+        "emailPlaceholder": "E-Mail-Adresse",
+        "phonePlaceholder": "Telefonnummer",
+        "passwordPlaceholder": "Passwort erstellen",
+        "signUpButton": "Registrieren",
+        "requestReceived": "Registrierungsanfrage erhalten! Ein Administrator wird sie in Kürze prüfen."
+    },
+    "verify": {
+        "title": "Bestätigen Sie Ihre E-Mail",
+        "subtitle": "Wir haben einen Bestätigungscode an {email} gesendet. Bitte geben Sie ihn unten ein.",
+        "codePlaceholder": "Bestätigungscode",
+        "button": "Bestätigen & Registrieren",
+        "backButton": "Zurück zur Registrierung",
+        "invalidCode": "Ungültiger Bestätigungscode. Bitte versuchen Sie es erneut."
+    },
+    "positions": {
+        "CEO": "Geschäftsführer",
+        "CTO": "Technischer Leiter",
+        "CFO": "Finanzvorstand",
+        "COO": "Betriebsleiter",
+        "HeadofDepartment": "Abteilungsleiter",
+        "TeamLead": "Teamleiter",
+        "ProjectManager": "Projektmanager",
+        "SeniorSpecialist": "Senior-Spezialist",
+        "JuniorSpecialist": "Junior-Spezialist",
+        "Intern": "Praktikant"
+    },
+    "dashboard": {
+        "title": "Dashboard"
+    },
+    "statCards": {
+        "totalMeetings": "Gesamte Meetings",
+        "meetingsThisWeek": "Meetings diese Woche",
+        "pendingPayments": "Ausstehende Zahlungen",
+        "startThisWeek": "Start diese Woche",
+        "activeEscrows": "Aktive Treuhandschaften",
+        "inCompensation": "In Entschädigung",
+        "testCondition": "Testbedingung",
+        "progress": "Fortschritt"
+    },
+    "tabs": {
+        "calendar": "Kalender",
+        "financials": "Finanzen",
+        "challenges": "Herausforderungen & Vorteile",
+        "contacts": "Kontakte",
+        "tasks": "Aufgaben",
+        "adminPanel": "Admin-Panel"
+    },
+    "calendar": {
+        "today": "Heute",
+        "month": "Monat",
+        "week": "Woche",
+        "newEvent": "Neuer Termin",
+        "openPicker": "Datumsauswahl öffnen",
+        "addEventTo": "Termin hinzufügen zu"
+    },
+    "days": {
+        "monday": "Montag",
+        "tuesday": "Dienstag",
+        "wednesday": "Mittwoch",
+        "thursday": "Donnerstag",
+        "friday": "Freitag",
+        "saturday": "Samstag",
+        "sunday": "Sonntag"
+    },
+    "daysShort": {
+        "mon": "Mo",
+        "tue": "Di",
+        "wed": "Mi",
+        "thu": "Do",
+        "fri": "Fr",
+        "sat": "Sa",
+        "sun": "So"
+    },
+    "financials": {
+        "description": "Beschreibung",
+        "amount": "Betrag",
+        "status": "Status",
+        "dueDate": "Fälligkeitsdatum",
+        "type": "Typ",
+        "newRecord": "Neuer Eintrag",
+        "incoming": "Eingehend",
+        "outgoing": "Ausgehend"
+    },
+    "challenges": {
+        "title": "Herausforderungen",
+        "add": "Herausforderung hinzufügen",
+        "description": "Beschreibung",
+        "severity": "Schweregrad",
+        "severities": {
+            "high": "Hoch",
+            "medium": "Mittel",
+            "low": "Niedrig"
+        }
+    },
+    "advantages": {
+        "title": "Vorteile",
+        "add": "Vorteil hinzufügen",
+        "description": "Beschreibung"
+    },
+    "contacts": {
+        "searchPlaceholder": "Suche nach Name, Rolle, Stadt...",
+        "newContact": "Neuer Kontakt",
+        "sort": {
+            "firstNameAsc": "Vorname (A-Z)",
+            "firstNameDesc": "Vorname (Z-A)",
+            "lastNameAsc": "Nachname (A-Z)",
+            "lastNameDesc": "Nachname (Z-A)",
+            "countryAsc": "Land (A-Z)",
+            "cityAsc": "Stadt (A-Z)",
+            "roleAsc": "Rolle (A-Z)"
+        },
+        "firstName": "Vorname",
+        "lastName": "Nachname",
+        "email": "E-Mail",
+        "role": "Rolle",
+        "type": "Typ",
+        "country": "Land",
+        "city": "Stadt",
+        "phone": "Telefon",
+        "address": "Adresse"
+    },
+    "tasks": {
+        "newTask": "Neue Aufgabe",
+        "title": "Titel",
+        "priority": "Priorität",
+        "status": "Status",
+        "dueDate": "Fälligkeitsdatum",
+        "assignee": "Zugewiesen an"
+    },
+    "status": {
+        "paid": "Bezahlt",
+        "pending": "Ausstehend",
+        "overdue": "Überfällig",
+        "todo": "Zu erledigen",
+        "inprogress": "In Bearbeitung",
+        "done": "Erledigt"
+    },
+    "admin": {
+        "userPermissions": "Benutzerberechtigungen",
+        "auditLog": "Audit-Protokoll",
+        "signupRequests": "Registrierungsanfragen",
+        "approve": "Genehmigen",
+        "deny": "Ablehnen",
+        "noRequests": "Keine ausstehenden Registrierungsanfragen.",
+        "by": "von"
+    },
+    "userRoles": {
+        "admin": "Administrator",
+        "user": "Benutzer"
+    },
+    "dataTypes": {
+        "schedule": "Kalenderereignis",
+        "financials": "Finanzdatensatz",
+        "challenges": "Herausforderung",
+        "advantages": "Vorteil",
+        "contacts": "Kontakt",
+        "tasks": "Aufgabe",
+        "users": "Benutzer",
+        "SignupRequest": "Registrierungsanfrage"
+    },
+    "auditLogActions": {
+        "Created": "Erstellt",
+        "Updated": "Aktualisiert",
+        "Deleted": "Gelöscht",
+        "Approved": "Genehmigt",
+        "Denied": "Abgelehnt"
+    },
+    "detailModal": {
+        "details": "Details"
+    },
+    "editModal": {
+        "editTitle": "{type} bearbeiten",
+        "new": {
+            "schedule": "Neues Kalenderereignis",
+            "financials": "Neuer Finanzdatensatz",
+            "challenges": "Neue Herausforderung",
+            "advantages": "Neuer Vorteil",
+            "contacts": "Neuer Kontakt",
+            "tasks": "Neue Aufgabe",
+            "users": "Neuer Benutzer"
+        },
+        "participantsPlaceholder": "Namen durch Komma getrennt"
+    },
+    "actions": {
+        "edit": "Bearbeiten",
+        "delete": "Löschen",
+        "save": "Speichern",
+        "cancel": "Abbrechen"
+    },
+    "chatbot": {
+        "toggle": "Chatbot umschalten",
+        "header": "Dripfy KI-Assistent",
+        "subtitle": "Fragen Sie nach den Daten auf Ihrem Bildschirm",
+        "initialMessage": "Hallo! Ich bin Dripfy AI. Wie kann ich Ihnen heute bei der Analyse Ihrer Dashboard-Daten helfen?",
+        "placeholder": "Stellen Sie eine Frage...",
+        "send": "Senden",
+        "error": "Entschuldigung, ich habe Verbindungsprobleme. Bitte versuchen Sie es später erneut.",
+        "clear": "Chat löschen",
+        "examplePrompts": "Beispiel-Prompts",
+        "prompt1": "Fassen Sie den Zeitplan der nächsten Woche zusammen.",
+        "prompt2": "Gibt es bald fällige Aufgaben mit hoher Priorität?",
+        "prompt3": "Listen Sie alle Kontakte aus Deutschland auf.",
+        "prompt4": "Was sind unsere größten Herausforderungen?"
+    },
+    "footer": {
+        "links": "Links",
+        "imprint": "Impressum",
+        "privacy": "Datenschutz",
+        "terms": "AGB",
+        "followUs": "Folgen Sie uns",
+        "copyright": "© 2024 Dripfy GmbH. Alle Rechte vorbehalten."
+    },
+    "profile": {
+        "menu": {
+            "profile": "Profil",
+            "settings": "Einstellungen",
+            "privacy": "Datenschutz & Sicherheit",
+            "logout": "Abmelden"
+        }
+    },
+    "settings": {
+        "title": "Einstellungen",
+        "closeButton": "Schließen",
+        "saveButton": "Änderungen speichern",
+        "tabs": {
+            "profile": "Profil",
+            "settings": "Allgemein",
+            "privacy": "Datenschutz"
+        },
+        "profile": {
+            "title": "Profilinformationen",
+            "subtitle": "Aktualisieren Sie hier Ihre persönlichen Daten.",
+            "name": "Vollständiger Name",
+            "email": "E-Mail-Adresse",
+            "password": "Passwort",
+            "changePassword": "Passwort ändern"
+        },
+        "settings": {
+            "title": "Allgemeine Einstellungen",
+            "subtitle": "Passen Sie Ihre Anwendungserfahrung an.",
+            "language": "Sprache",
+            "darkMode": "Dunkelmodus",
+            "emailNotifications": "E-Mail-Benachrichtigungen",
+            "pushNotifications": "Push-Benachrichtigungen"
+        },
+        "privacy": {
+            "title": "Datenschutz und Sicherheit",
+            "subtitle": "Verwalten Sie Ihre Daten und die Kontosicherheit.",
+            "auditLog": "Aktivitätsprotokoll anzeigen",
+            "exportData": "Meine Daten exportieren",
+            "deleteAccount": "Mein Konto löschen",
+            "deleteAccountConfirm": "Sind Sie sicher, dass Sie Ihr Konto löschen möchten? Diese Aktion ist endgültig und kann nicht rückgängig gemacht werden."
+        }
+    },
+    "passwordChange": {
+        "title": "Passwort ändern",
+        "subtitleEmail": "Wir senden einen Bestätigungscode an Ihre E-Mail, um Ihre Identität zu bestätigen.",
+        "subtitleCode": "Geben Sie den an {email} gesendeten Code und Ihr neues Passwort ein.",
+        "sendCodeButton": "Bestätigungscode senden",
+        "updateButton": "Passwort aktualisieren",
+        "newPassword": "Neues Passwort",
+        "confirmPassword": "Neues Passwort bestätigen",
+        "success": "Passwort erfolgreich aktualisiert!",
+        "error": {
+            "code": "Ungültiger Bestätigungscode.",
+            "match": "Passwörter stimmen nicht überein."
+        }
+    },
+    "schedule": {
+        "title": "Titel",
+        "day": "Tag",
+        "time": "Uhrzeit",
+        "participants": "Teilnehmer",
+        "type": "Typ"
+    }
 }
