--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -1,187 +1,290 @@
+
 {
-  "login.subtitle": "Yönetim Bilgi Sistemi",
-  "login.emailPlaceholder": "E-posta adresi",
-  "login.passwordPlaceholder": "Şifre",
-  "login.signInButton": "Giriş Yap",
-  "login.welcome": "Hoş geldiniz",
-  "signup.prompt": "Hesabınız yok mu? Kayıt Ol",
-  "signup.loginPrompt": "Zaten bir hesabınız var mı? Giriş Yap",
-  "signup.namePlaceholder": "Tam Adınız",
-  "signup.emailPlaceholder": "E-posta adresi",
-  "signup.phonePlaceholder": "Telefon Numarası",
-  "signup.passwordPlaceholder": "Bir şifre oluşturun",
-  "signup.signUpButton": "Erişim İste",
-  "tabs.calendar": "Takvim",
-  "tabs.financials": "Finansal",
-  "tabs.challenges": "Zorluklar & Avantajlar",
-  "tabs.contacts": "Kişiler",
-  "tabs.tasks": "Görevler",
-  "tabs.adminPanel": "Yönetici Paneli",
-  "statCards.totalMeetings": "Toplam Toplantılar",
-  "statCards.meetingsThisWeek": "Bu Haftaki Toplantılar",
-  "statCards.pendingPayments": "Bekleyen Ödemeler",
-  "statCards.startThisWeek": "Bu Hafta Başlıyor",
-  "statCards.activeEscrows": "Aktif Kişiler",
-  "statCards.inCompensation": "Son Eklenenler",
-  "statCards.testCondition": "Görev Tamamlama",
-  "chatbot.initialMessage": "Merhaba! Pano verileriyle ilgili bugün size nasıl yardımcı olabilirim?",
-  "chatbot.prompt1": "Bugünkü görevlerimi özetle.",
-  "chatbot.prompt2": "Hangi ödemeler beklemede?",
-  "chatbot.prompt3": "Yüksek öncelikli görevleri göster.",
-  "chatbot.prompt4": "Tıbbi kurulda kimler var?",
-  "chatbot.toggle": "Chatbot'u Aç/Kapat",
-  "chatbot.header": "Dripfy AI Asistanı",
-  "chatbot.subtitle": "Çevrimiçi",
-  "chatbot.clear": "Sohbeti Temizle",
-  "chatbot.error": "Üzgünüm, bir hata oluştu.",
-  "chatbot.examplePrompts": "Örnek Sorular",
-  "chatbot.placeholder": "Pano verileri hakkında sorun...",
-  "chatbot.send": "Gönder",
-  "profile.menu.profile": "Profil",
-  "profile.menu.settings": "Ayarlar",
-  "profile.menu.privacy": "Gizlilik",
-  "profile.menu.logout": "Çıkış Yap",
-  "settings.title": "Ayarlar",
-  "settings.closeButton": "Kapat",
-  "settings.saveButton": "Değişiklikleri Kaydet",
-  "settings.tabs.profile": "Profil",
-  "settings.tabs.settings": "Ayarlar",
-  "settings.tabs.privacy": "Gizlilik",
-  "settings.profile.title": "Kişisel Bilgiler",
-  "settings.profile.subtitle": "Fotoğrafınızı ve kişisel bilgilerinizi güncelleyin.",
-  "settings.profile.name": "Tam Adınız",
-  "settings.profile.email": "E-posta Adresi",
-  "settings.profile.password": "Şifre",
-  "settings.profile.newPassword": "Yeni Şifre",
-  "settings.profile.confirmPassword": "Yeni Şifreyi Onayla",
-  "settings.profile.changePassword": "Şifreyi Değiştir",
-  "settings.profile.role": "Rol",
-  "settings.settings.title": "Uygulama Ayarları",
-  "settings.settings.subtitle": "Deneyiminizi özelleştirin.",
-  "settings.settings.language": "Dil",
-  "settings.settings.darkMode": "Karanlık Mod",
-  "settings.settings.emailNotifications": "E-posta Bildirimleri",
-  "settings.settings.pushNotifications": "Anlık Bildirimler",
-  "settings.privacy.title": "Gizlilik Ayarları",
-  "settings.privacy.subtitle": "Verilerinizi ve gizliliğinizi yönetin.",
-  "settings.privacy.auditLog": "Aktivite Kaydı",
-  "settings.privacy.exportData": "Verilerimi Dışa Aktar",
-  "settings.privacy.deleteAccount": "Hesabı Sil",
-  "settings.privacy.exporting": "Dışa aktarılıyor...",
-  "settings.privacy.deleting": "Siliniyor...",
-  "days.monday": "Pazartesi",
-  "days.tuesday": "Salı",
-  "days.wednesday": "Çarşamba",
-  "days.thursday": "Perşembe",
-  "days.friday": "Cuma",
-  "days.saturday": "Cumartesi",
-  "days.sunday": "Pazar",
-  "daysShort.mon": "Pzt",
-  "daysShort.tue": "Sal",
-  "daysShort.wed": "Çar",
-  "daysShort.thu": "Per",
-  "daysShort.fri": "Cum",
-  "daysShort.sat": "Cmt",
-  "daysShort.sun": "Paz",
-  "calendar.today": "Bugün",
-  "calendar.month": "Ay",
-  "calendar.week": "Hafta",
-  "calendar.newEvent": "Yeni Etkinlik",
-  "calendar.addEventTo": "Etkinlik ekle:",
-  "calendar.openPicker": "Tarih seçiciyi aç",
-  "financials.newRecord": "Yeni Kayıt",
-  "financials.description": "Açıklama",
-  "financials.amount": "Miktar",
-  "financials.status": "Durum",
-  "financials.dueDate": "Vade Tarihi",
-  "status.paid": "Ödendi",
-  "status.pending": "Beklemede",
-  "status.overdue": "Gecikmiş",
-  "challenges.title": "Zorluklar",
-  "challenges.add": "Zorluk Ekle",
-  "advantages.title": "Avantajlar",
-  "advantages.add": "Avantaj Ekle",
-  "contacts.newContact": "Yeni Kişi",
-  "tasks.task": "Görev",
-  "tasks.assignee": "Atanan",
-  "tasks.priority": "Öncelik",
-  "tasks.status": "Durum",
-  "tasks.dueDate": "Bitiş Tarihi",
-  "tasks.newTask": "Yeni Görev",
-  "priority.high": "Yüksek",
-  "priority.medium": "Orta",
-  "priority.low": "Düşük",
-  "taskStatus.ToDo": "Yapılacak",
-  "taskStatus.InProgress": "Devam Ediyor",
-  "taskStatus.Done": "Tamamlandı",
-  "admin.userPermissions": "Kullanıcı İzinleri",
-  "admin.auditLog": "Denetim Kaydı",
-  "admin.signupRequests": "Kayıt İstekleri",
-  "admin.by": "tarafından",
-  "admin.approve": "Onayla",
-  "admin.deny": "Reddet",
-  "admin.noRequests": "Bekleyen kayıt isteği yok.",
-  "userRoles.admin": "Yönetici",
-  "userRoles.user": "Kullanıcı",
-  "auditLogActions.Created": "Oluşturuldu",
-  "auditLogActions.Updated": "Güncellendi",
-  "auditLogActions.Deleted": "Silindi",
-  "auditLogActions.Approved": "Onaylandı",
-  "auditLogActions.Denied": "Reddedildi",
-  "dataTypes.schedule": "Etkinlik",
-  "dataTypes.financial": "Finansal Kayıt",
-  "dataTypes.challenge": "Zorluk",
-  "dataTypes.advantage": "Avantaj",
-  "dataTypes.contact": "Kişi",
-  "dataTypes.task": "Görev",
-  "dataTypes.user": "Kullanıcı",
-  "dataTypes.SignupRequest": "Kayıt İsteği",
-  "modal.createNew": "Yeni Oluştur",
-  "modal.edit": "Düzenle",
-  "modal.delete": "Sil",
-  "modal.create": "Oluştur",
-  "modal.save": "Değişiklikleri Kaydet",
-  "modal.noFields": "Bu öğe türü için düzenlenebilir alan yok.",
-  "modal.type": "Tür",
-  "modal.status": "Durum",
-  "modal.dueDate": "Vade Tarihi",
-  "modal.schedule.title": "Başlık",
-  "modal.schedule.day": "Gün",
-  "modal.schedule.time": "Saat",
-  "modal.schedule.participants": "Katılımcılar (virgülle ayırın)",
-  "modal.financials.description": "Açıklama",
-  "modal.financials.amount": "Miktar (€)",
-  "modal.challenges.title": "Başlık",
-  "modal.challenges.description": "Açıklama",
-  "modal.challenges.severity": "Önem Derecesi",
-  "modal.advantages.title": "Başlık",
-  "modal.advantages.description": "Açıklama",
-  "modal.contacts.name": "İsim",
-  "modal.contacts.role": "Rol",
-  "modal.contacts.email": "E-posta",
-  "modal.contacts.phone": "Telefon",
-  "modal.tasks.title": "Başlık",
-  "modal.tasks.assignee": "Atanan",
-  "modal.tasks.priority": "Öncelik",
-  "modal.users.name": "İsim",
-  "modal.users.email": "E-posta",
-  "modal.users.role": "Rol",
-  "footer.links": "Bağlantılar",
-  "footer.imprint": "Künye",
-  "footer.privacy": "Gizlilik Politikası",
-  "footer.terms": "Şartlar ve Koşullar",
-  "footer.followUs": "Bizi Takip Edin",
-  "footer.copyright": "© 2024 Dripfy GmbH. Tüm hakları saklıdır.",
-  "positions": {
-    "CEO": "CEO",
-    "CTO": "CTO",
-    "CFO": "CFO",
-    "COO": "COO",
-    "HeadofDepartment": "Departman Başkanı",
-    "TeamLead": "Takım Lideri",
-    "ProjectManager": "Proje Yöneticisi",
-    "SeniorSpecialist": "Kıdemli Uzman",
-    "JuniorSpecialist": "Uzman",
-    "Intern": "Stajyer"
-  }
+    "login": {
+        "welcome": "Hoş geldiniz",
+        "subtitle": "longevity by infusions",
+        "emailPlaceholder": "E-posta adresi",
+        "passwordPlaceholder": "Şifre",
+        "signInButton": "Giriş Yap",
+        "forgotPassword": "Şifremi unuttum"
+    },
+    "signup": {
+        "prompt": "Hesabınız yok mu? Kayıt olun",
+        "loginPrompt": "Zaten bir hesabınız var mı? Giriş yapın",
+        "namePlaceholder": "Ad Soyad",
+        "emailPlaceholder": "E-posta adresi",
+        "phonePlaceholder": "Telefon Numarası",
+        "passwordPlaceholder": "Şifre Oluştur",
+        "signUpButton": "Kayıt Ol",
+        "requestReceived": "Kayıt talebiniz alındı! Bir yönetici yakında inceleyecektir."
+    },
+    "verify": {
+        "title": "E-postanızı doğrulayın",
+        "subtitle": "{email} adresine bir doğrulama kodu gönderdik. Lütfen aşağıya girin.",
+        "codePlaceholder": "Doğrulama Kodu",
+        "button": "Doğrula ve Kaydol",
+        "backButton": "Kayda geri dön",
+        "invalidCode": "Geçersiz doğrulama kodu. Lütfen tekrar deneyin."
+    },
+    "positions": {
+        "CEO": "CEO",
+        "CTO": "CTO",
+        "CFO": "CFO",
+        "COO": "COO",
+        "HeadofDepartment": "Departman Başkanı",
+        "TeamLead": "Takım Lideri",
+        "ProjectManager": "Proje Yöneticisi",
+        "SeniorSpecialist": "Kıdemli Uzman",
+        "JuniorSpecialist": "Uzman",
+        "Intern": "Stajyer"
+    },
+    "dashboard": {
+        "title": "Kontrol Paneli"
+    },
+    "statCards": {
+        "totalMeetings": "Toplam Toplantılar",
+        "meetingsThisWeek": "Bu hafta başlayan toplantılar",
+        "pendingPayments": "Bekleyen Ödemeler",
+        "startThisWeek": "Bu hafta başla",
+        "activeEscrows": "Aktif Emanetler",
+        "inCompensation": "Tazminat içinde",
+        "testCondition": "Test Koşulu",
+        "progress": "İlerleme"
+    },
+    "tabs": {
+        "calendar": "Takvim",
+        "financials": "Finansallar",
+        "challenges": "Zorluklar & Avantajlar",
+        "contacts": "Kişiler",
+        "tasks": "Görevler",
+        "adminPanel": "Yönetici Paneli"
+    },
+    "calendar": {
+        "today": "Bugün",
+        "month": "Ay",
+        "week": "Hafta",
+        "newEvent": "Yeni Etkinlik",
+        "openPicker": "Tarih seçiciyi aç",
+        "addEventTo": "Şuraya etkinlik ekle:"
+    },
+    "days": {
+        "monday": "Pazartesi",
+        "tuesday": "Salı",
+        "wednesday": "Çarşamba",
+        "thursday": "Perşembe",
+        "friday": "Cuma",
+        "saturday": "Cumartesi",
+        "sunday": "Pazar"
+    },
+    "daysShort": {
+        "mon": "Pzt",
+        "tue": "Sal",
+        "wed": "Çar",
+        "thu": "Per",
+        "fri": "Cum",
+        "sat": "Cmt",
+        "sun": "Paz"
+    },
+    "financials": {
+        "description": "Açıklama",
+        "amount": "Miktar",
+        "status": "Durum",
+        "dueDate": "Vade Tarihi",
+        "type": "Tür",
+        "newRecord": "Yeni Kayıt",
+        "incoming": "Gelen",
+        "outgoing": "Giden"
+    },
+    "challenges": {
+        "title": "Zorluklar",
+        "add": "Zorluk Ekle",
+        "description": "Açıklama",
+        "severity": "Önem Derecesi",
+        "severities": {
+            "high": "Yüksek",
+            "medium": "Orta",
+            "low": "Düşük"
+        }
+    },
+    "advantages": {
+        "title": "Avantajlar",
+        "add": "Avantaj Ekle",
+        "description": "Açıklama"
+    },
+    "contacts": {
+        "searchPlaceholder": "İsim, rol, şehir ara...",
+        "newContact": "Yeni Kişi",
+        "sort": {
+            "firstNameAsc": "Ad (A-Z)",
+            "firstNameDesc": "Ad (Z-A)",
+            "lastNameAsc": "Soyad (A-Z)",
+            "lastNameDesc": "Soyad (Z-A)",
+            "countryAsc": "Ülke (A-Z)",
+            "cityAsc": "Şehir (A-Z)",
+            "roleAsc": "Rol (A-Z)"
+        },
+        "firstName": "Ad",
+        "lastName": "Soyad",
+        "email": "E-posta",
+        "role": "Rol",
+        "type": "Tür",
+        "country": "Ülke",
+        "city": "Şehir",
+        "phone": "Telefon",
+        "address": "Adres"
+    },
+    "tasks": {
+        "newTask": "Yeni Görev",
+        "title": "Başlık",
+        "priority": "Öncelik",
+        "status": "Durum",
+        "dueDate": "Bitiş Tarihi",
+        "assignee": "Atanan"
+    },
+    "status": {
+        "paid": "Ödendi",
+        "pending": "Beklemede",
+        "overdue": "Gecikmiş",
+        "todo": "Yapılacak",
+        "inprogress": "Devam Ediyor",
+        "done": "Tamamlandı"
+    },
+    "admin": {
+        "userPermissions": "Kullanıcı İzinleri",
+        "auditLog": "Denetim Kaydı",
+        "signupRequests": "Kayıt Talepleri",
+        "approve": "Onayla",
+        "deny": "Reddet",
+        "noRequests": "Bekleyen kayıt talebi yok.",
+        "by": "tarafından"
+    },
+    "userRoles": {
+        "admin": "Yönetici",
+        "user": "Kullanıcı"
+    },
+    "dataTypes": {
+        "schedule": "Takvim Etkinliği",
+        "financials": "Finansal Kayıt",
+        "challenges": "Zorluk",
+        "advantages": "Avantaj",
+        "contacts": "Kişi",
+        "tasks": "Görev",
+        "users": "Kullanıcı",
+        "SignupRequest": "Kayıt Talebi"
+    },
+    "auditLogActions": {
+        "Created": "Oluşturuldu",
+        "Updated": "Güncellendi",
+        "Deleted": "Silindi",
+        "Approved": "Onaylandı",
+        "Denied": "Reddedildi"
+    },
+    "detailModal": {
+        "details": "Detaylar"
+    },
+    "editModal": {
+        "editTitle": "{type} Düzenle",
+        "new": {
+            "schedule": "Yeni Takvim Etkinliği",
+            "financials": "Yeni Finansal Kayıt",
+            "challenges": "Yeni Zorluk",
+            "advantages": "Yeni Avantaj",
+            "contacts": "Yeni Kişi",
+            "tasks": "Yeni Görev",
+            "users": "Yeni Kullanıcı"
+        },
+        "participantsPlaceholder": "Virgülle ayrılmış isimler"
+    },
+    "actions": {
+        "edit": "Düzenle",
+        "delete": "Sil",
+        "save": "Kaydet",
+        "cancel": "İptal"
+    },
+    "chatbot": {
+        "toggle": "Chatbot'u Aç/Kapat",
+        "header": "Dripfy AI Asistanı",
+        "subtitle": "Ekranınızdaki veriler hakkında sorun",
+        "initialMessage": "Merhaba! Ben Dripfy AI. Bugün kontrol paneli verilerinizi analiz etmenize nasıl yardımcı olabilirim?",
+        "placeholder": "Bir soru sorun...",
+        "send": "Gönder",
+        "error": "Üzgünüm, bağlantı kurarken bir sorun yaşıyorum. Lütfen daha sonra tekrar deneyin.",
+        "clear": "Sohbeti Temizle",
+        "examplePrompts": "Örnek Sorular",
+        "prompt1": "Gelecek haftanın takvimini özetle.",
+        "prompt2": "Yakında teslim edilmesi gereken yüksek öncelikli görevler var mı?",
+        "prompt3": "Almanya'daki tüm kişileri listele.",
+        "prompt4": "Karşılaştığımız en büyük zorluklar nelerdir?"
+    },
+    "footer": {
+        "links": "Bağlantılar",
+        "imprint": "Künye",
+        "privacy": "Gizlilik Politikası",
+        "terms": "Şartlar ve Koşullar",
+        "followUs": "Bizi Takip Edin",
+        "copyright": "© 2024 Dripfy GmbH. Tüm Hakları Saklıdır."
+    },
+    "profile": {
+        "menu": {
+            "profile": "Profil",
+            "settings": "Ayarlar",
+            "privacy": "Gizlilik ve Güvenlik",
+            "logout": "Çıkış Yap"
+        }
+    },
+    "settings": {
+        "title": "Ayarlar",
+        "closeButton": "Kapat",
+        "saveButton": "Değişiklikleri Kaydet",
+        "tabs": {
+            "profile": "Profil",
+            "settings": "Genel",
+            "privacy": "Gizlilik"
+        },
+        "profile": {
+            "title": "Profil Bilgileri",
+            "subtitle": "Kişisel bilgilerinizi buradan güncelleyin.",
+            "name": "Ad Soyad",
+            "email": "E-posta Adresi",
+            "password": "Şifre",
+            "changePassword": "Şifreyi Değiştir"
+        },
+        "settings": {
+            "title": "Genel Ayarlar",
+            "subtitle": "Uygulama deneyiminizi özelleştirin.",
+            "language": "Dil",
+            "darkMode": "Karanlık Mod",
+            "emailNotifications": "E-posta Bildirimleri",
+            "pushNotifications": "Anlık Bildirimler"
+        },
+        "privacy": {
+            "title": "Gizlilik ve Güvenlik",
+            "subtitle": "Verilerinizi ve hesap güvenliğinizi yönetin.",
+            "auditLog": "Aktivite Kaydını Görüntüle",
+            "exportData": "Verilerimi Dışa Aktar",
+            "deleteAccount": "Hesabımı Sil",
+            "deleteAccountConfirm": "Hesabınızı silmek istediğinizden emin misiniz? Bu işlem kalıcıdır ve geri alınamaz."
+        }
+    },
+    "passwordChange": {
+        "title": "Şifreyi Değiştir",
+        "subtitleEmail": "Kimliğinizi doğrulamak için e-postanıza bir doğrulama kodu göndereceğiz.",
+        "subtitleCode": "{email} adresine gönderdiğimiz kodu ve yeni şifrenizi girin.",
+        "sendCodeButton": "Doğrulama Kodu Gönder",
+        "updateButton": "Şifreyi Güncelle",
+        "newPassword": "Yeni Şifre",
+        "confirmPassword": "Yeni Şifreyi Onayla",
+        "success": "Şifre başarıyla güncellendi!",
+        "error": {
+            "code": "Geçersiz doğrulama kodu.",
+            "match": "Şifreler eşleşmiyor."
+        }
+    },
+    "schedule": {
+        "title": "Başlık",
+        "day": "Gün",
+        "time": "Saat",
+        "participants": "Katılımcılar",
+        "type": "Tür"
+    }
 }
