feat: Enhance dashboard layout and StatCards functionality
Refactors the dashboard layout to improve visual structure and introduces dynamic data fetching and display for StatCards. The Header component now has a slightly adjusted z-index to accommodate potential overlays. Chatbot positioning and layering are also improved. ChallengesTab now uses a more consistent grid gap.

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -46,9 +46,9 @@
         "meetingsThisWeek": "اجتماعات تبدأ هذا الأسبوع",
         "pendingPayments": "المدفوعات المعلقة",
         "startThisWeek": "بداية هذا الأسبوع",
-        "activeEscrows": "الضمانات النشطة",
-        "inCompensation": "في التعويض",
-        "testCondition": "شرط الاختبار",
+        "activePartners": "الشركاء النشطون",
+        "acrossAllRegions": "في جميع المناطق",
+        "taskCompletion": "إنجاز المهام",
         "progress": "التقدم"
     },
     "tabs": {
